--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 </head>
 
-<body class="m-5 lg:m-10">
+<body class="m-5 mb-0 lg:m-10 lg:mb-0">
     <!-- Header: Start -->
     <header class="max-w-screen-xl mx-auto my-5 lg:my-16">
         <h1 class="text-3xl text-center font-extrabold text-gray-900 dark:text-white md:text-5xl lg:text-6xl">
