--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <section>
             <div class="flex flex-wrap gap-3 lg:gap-5 justify-center items-center">
                 <!-- Subhan Allah Card -->
-                <div class="shadow-lg rounded p-5 flex flex-col justify-center items-center space-y-5">
+                <div class="shadow-lg rounded p-5 flex flex-col justify-center items-center space-y-5 w-full md:w-auto">
                     <h3 class="text-gray-600 text-xl font-semibold">Subhan Allah</h3>
                     <p id="subhanAllahCounter" class="text-gray-600 text-2xl">0</p>
                     <div>
@@ -37,7 +37,7 @@
                     </div>
                 </div>
                 <!-- Alhamdulillah Card -->
-                <div class="shadow-lg rounded p-5 flex flex-col justify-center items-center space-y-5">
+                <div class="shadow-lg rounded p-5 flex flex-col justify-center items-center space-y-5 w-full md:w-auto">
                     <h3 class="text-gray-600 text-xl font-semibold">Alhamdulillah</h3>
                     <p id="alhamdulillahCounter" class="text-gray-600 text-2xl">0</p>
                     <div>
@@ -46,7 +46,7 @@
                     </div>
                 </div>
                 <!-- Allahu Akbar Card -->
-                <div class="shadow-lg rounded p-5 flex flex-col justify-center items-center space-y-5">
+                <div class="shadow-lg rounded p-5 flex flex-col justify-center items-center space-y-5 w-full md:w-auto">
                     <h3 class="text-gray-600 text-xl font-semibold">Allahu Akbar</h3>
                     <p id="allahuAkbarCounter" class="text-gray-600 text-2xl">0</p>
                     <div>
