--- a/index.html
+++ b/index.html
@@ -10,20 +10,23 @@
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.5.1/dist/full.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
 
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="assets/img/tasbih.png" type="image/x-icon">
+
 </head>
 
-<body class="m-5 mb-0 lg:m-10 lg:mb-0">
+<body>
     <!-- Header: Start -->
-    <header class="max-w-screen-xl mx-auto my-5 lg:my-16">
+    <header class="max-w-screen-xl mx-5 lg:mx-auto my-5 lg:my-16">
         <h1 class="text-3xl text-center font-extrabold text-gray-900 dark:text-white md:text-5xl lg:text-6xl">
-            <span class="text-transparent bg-clip-text bg-gradient-to-r to-emerald-600 from-sky-400">Digital Tasbih
+            <span class="text-transparent bg-clip-text bg-gradient-to-r from-cyan-500 to-green-500">Digital Tasbih
             </span>
         </h1>
     </header>
     <!-- Header: End -->
 
     <!-- Main: Start -->
-    <main class="max-w-screen-xl mx-auto my-5 lg:my-16">
+    <main class="max-w-screen-xl mx-5 lg:mx-auto my-5 lg:my-16 ">
         <!-- Tasbih Couner Section: Start -->
         <section>
             <div class="flex flex-wrap gap-3 lg:gap-5 justify-center items-center">
@@ -63,11 +66,21 @@
 
     </main>
     <!-- Main: End -->
-    <footer class="bg-black text-white mx-auto p-5 md:p-10 mt-5 lg:mt-16">
+
+    <!-- Footer: Start -->
+    <footer class="mx-auto p-5 md:p-10 mt-5 lg:mt-16">
+        <hr class="mb-5 lg:mx-10">
         <div class="max-w-screen-xl mx-auto">
             <p class="text-center">&copy; Digital Tasbih 2023. All right reserved.</p>
+            <p class="text-center text-gray-400 font-medium">[<a href="https://github.com/rocktohq/digital-tasbih"><span
+                        class="text-cyan-500">&#8944; Github</span>: <span class="text-red-500">Source Code &#8945;</span></a>]</p>
         </div>
     </footer>
+    <!-- Footer: End -->
+
+    <!-- JavaScripts -->
+    <script src="assets/js/app.js"></script>
+    <!-- JavaScripts -->
 </body>
 
 </html>
