--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
         <div class="max-w-screen-xl mx-auto">
             <p class="text-center">&copy; Digital Tasbih 2023. All right reserved.</p>
             <p class="text-center text-gray-400 font-medium">[<a href="https://github.com/rocktohq/digital-tasbih"><span
-                        class="text-cyan-500">&#8944; Github</span>: <span class="text-red-500">Source Code &#8945;</span></a>]</p>
+                        class="text-cyan-500">&#8944; Github</span>: <span class="text-red-500">Source Code
+                        &#8945;</span></a>]</p>
         </div>
     </footer>
     <!-- Footer: End -->
