--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div class="shadow-lg rounded p-5 flex flex-col justify-center items-center space-y-5 w-full md:w-auto">
                     <h3 class="text-gray-600 text-xl font-semibold">Subhan Allah</h3>
                     <p id="subhanAllahCounter" class="text-gray-600 text-2xl">0</p>
-                    <div>
+                    <div class="space-x-3">
                         <button id="subhanAllahIncBtn" class="btn btn-success text-white">Increment</button>
                         <button id="subhanAllahDecBtn" class="btn btn-error text-white">Decrement</button>
                     </div>
@@ -43,7 +43,7 @@
                 <div class="shadow-lg rounded p-5 flex flex-col justify-center items-center space-y-5 w-full md:w-auto">
                     <h3 class="text-gray-600 text-xl font-semibold">Alhamdulillah</h3>
                     <p id="alhamdulillahCounter" class="text-gray-600 text-2xl">0</p>
-                    <div>
+                    <div class="space-x-3">
                         <button id="alhamdulillahIncBtn" class="btn btn-success text-white">Increment</button>
                         <button id="alhamdulillahDecBtn" class="btn btn-error text-white">Decrement</button>
                     </div>
@@ -52,7 +52,7 @@
                 <div class="shadow-lg rounded p-5 flex flex-col justify-center items-center space-y-5 w-full md:w-auto">
                     <h3 class="text-gray-600 text-xl font-semibold">Allahu Akbar</h3>
                     <p id="allahuAkbarCounter" class="text-gray-600 text-2xl">0</p>
-                    <div>
+                    <div class="space-x-3">
                         <button id="allahuAkbarIncBtn" class="btn btn-success text-white">Increment</button>
                         <button id="allahuAkbarDecBtn" class="btn btn-error text-white">Decrement</button>
                     </div>
